--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,8 @@
 			{{ content }}
 			
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Just some random stuff</h1>
+				<p>Not much to see here. I'll use this page to post random things I make</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
