--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
-    margin: 60px auto;
-    width: 90%;
+    margin: 30px auto;
+    width: 80%;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -20,7 +20,7 @@ a:hover {
     text-decoration: underline;
 }
 h1 {
-    font-size: 3em;
+    font-size: 4em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
@@ -29,7 +29,7 @@ p {
     color: #333;
 }
 footer {
-    border-top: 1px solid #d5d5d5;
+    border-top: 1px solid #e5cb7c;
     font-size: .8em;
 }
 
